@@ -399,5 +399,6 @@ extern convar_t *graphheight;
 extern convar_t *graphscale;
 extern convar_t *graphshift;
 extern convar_t *r_fullscreen;
+extern convar_t *cl_logChat;
 
 #endif //!__COMMONCONSOLEVARS_HPP__
